--- a/test.Rmd
+++ b/test.Rmd
@@ -4,6 +4,7 @@ title: "D3 with GitHub Pages"
 author: "Andrew Mehrmann"
 date: "May 1, 2016"
 categories: blog
+output: html_document
 ---
 <script src="//code.jquery.com/jquery.js"></script>
 <style>
